--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,5 +18,8 @@
     <dimen name="filter_item_margin">28dp</dimen>
     <dimen name="action_icon_end_margin">24dp</dimen>
     <dimen name="button_height">60dp</dimen>
+    <dimen name="zero">0dp</dimen>
+    <dimen name="padding_4dp">4dp</dimen>
+    <dimen name="padding_22dp">22dp</dimen>
 
 </resources>
